--- a/index.html
+++ b/index.html
@@ -72,8 +72,18 @@
     </section>
     <!-- how it works starts -->
     <section class="how-it-works">
-        
+        <div class="howitworks">
+            <h3>How it works</h3>
+             <div class="secbox">
+                 <div class="imagebox"><img src="/media_content/vector-illustration-people-book-vacation-on-laptop-travel-or-journey-planning-plan-holiday-route-online-concept-internet-e-commerce-travel-techno-2F80F0R.jpg" alt=""></div>
+                 <div class="imagebox"><img src="/media_content/vector-illustration-people-book-vacation-on-laptop-travel-or-journey-planning-plan-holiday-route-online-concept-internet-e-commerce-travel-techno-2F80F0R.jpg" alt=""></div>
+                 <div class="imagebox"><img src="/media_content/vector-illustration-people-book-vacation-on-laptop-travel-or-journey-planning-plan-holiday-route-online-concept-internet-e-commerce-travel-techno-2F80F0R.jpg" alt=""></div>
+            </div>
+        </div>
     </section>
+    <!-- how it works section ends -->
+
+    
 
     <script src="Script.js"></script>
 </body>
