--- a/book.html
+++ b/book.html
@@ -24,7 +24,7 @@
         <nav class="navbar">
             <a href="/index.html" style="color: orange;">HOME</a>
             <a href="/book.html">book</a>
-            <a href="#packages">packages</a>
+            <a href="/packages.html">packages</a>
             <a href="#services">services</a>
             <a href="#gallary">Gallary</a>
             <a href="#review">review</a>
@@ -77,8 +77,10 @@
                         <h3>leaving</h3>
                         <input type="date" >
                     </div>
-                    <input type="submit" class="btn" value="book now">
-                </form>
+                    <div class="buttonbox">
+                        <input type="submit" class="btn" value="book now">
+                        </div>
+                    </form>
 
             </div>
     </section>
