--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="icon" type="image/x-icon" href="/media_content/gall1.jpg">
     <link rel="stylesheet" href="Styles.css" />
     <title>Travelo:ESTD.2023</title>
   </head>
@@ -17,7 +18,7 @@
       <a href="#" class="logo"> <span>T</span>RAVELO</a>
 
       <nav class="navbar">
-        <a href="/index.html" style="color: orange">HOME</a>
+        <a href="/index.html"  id="homeNav">HOME</a>
         <a href="/book.html">book</a>
         <a href="/packages.html">packages</a>
         <a href="#services">services</a>
@@ -108,7 +109,7 @@
     </section>
     <!-- how it works section ends -->
 
-    <!-- packages section starts here -->
+    <!-- popular destination starts here -->
     <section class="packages" id="packges">
       <h1>Popular Destinations</h1>
 
@@ -213,7 +214,7 @@
         <input type="button" class="btn" value="Explore More">
           </div>
     </section>
-    <!-- packages section ends here -->
+    <!-- popular destination ends here -->
 
     <!-- services section starts here  -->
     <section class="service" id="service">
@@ -294,7 +295,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="/media_content/gall3.jpeg" alt="gall1">
+                    <img src="/media_content/gall5.jpg" alt="gall1">
                     <div class="content">
                         <h3>Religious Site</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -346,7 +347,7 @@
             </div>
 
             <div class="box">
-                <img src="/media_content/pro2.jpg" alt="aayush">
+                <img src="/media_content/pro3.jpg" alt="aayush">
                 <div class="content">
                     <h3>Aayush</h3>
                     <p>the service was really best. go for it</p>
@@ -362,7 +363,7 @@
             </div>
 
             <div class="box">
-                <img src="/media_content/pro2.jpg" alt="aayush">
+                <img src="/media_content/pro4.jpg" alt="aayush">
                 <div class="content">
                     <h3>Aayush</h3>
                     <p>the service was really best. go for it</p>
@@ -378,7 +379,7 @@
             </div>
 
             <div class="box">
-                <img src="/media_content/pro2.jpg" alt="aayush">
+                <img src="/media_content/pro3.jpg" alt="aayush">
                 <div class="content">
                     <h3>Aayush</h3>
                     <p>the service was really best. go for it</p>
@@ -394,7 +395,7 @@
             </div>
 
             <div class="box">
-                <img src="/media_content/pro2.jpg" alt="aayush">
+                <img src="/media_content/pro4.jpg" alt="aayush">
                 <div class="content">
                     <h3>Aayush</h3>
                     <p>the service was really best. go for it</p>
@@ -410,7 +411,7 @@
             </div>
 
             <div class="box">
-                <img src="/media_content/pro2.jpg" alt="aayush">
+                <img src="/media_content/pro1.jpg" alt="aayush">
                 <div class="content">
                     <h3>Aayush</h3>
                     <p>the service was really best. go for it</p>
@@ -430,6 +431,81 @@
             </div>
     </section>
     <!-- review section ends here  -->
+
+    <!-- contact section starts here  -->
+        <section class="contact" id="contact">
+            <h1>connect to us</h1>
+            <div class="row">
+                <div class="image">
+                    <img src="/media_content/contact.png" alt="conatct">
+                </div>
+                <form action="#">
+                    <div class="inputBox">
+                        <input type="text" placeholder="Name">
+                        <input type="email" placeholder="email">
+                    </div>
+                    <div class="inputBox">
+                        <input type="number" placeholder="number">
+                        <input type="text" placeholder="subject">
+                    </div>
+                    <textarea name="message" id="avc" cols="30" rows="10" placeholder="message"></textarea>
+                    <div class="submitbutton">
+                    <input type="submit" class="btn" >
+                    </div>
+                </form>
+            </div>
+
+            <!-- <div class="findus" id="findus">
+                <div class="boxe" id="box1">
+                </div>
+                <div class="boxe" id="box2">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7778.371083742662!2d77.67509480000002!3d12.895787899999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1339d7500cd3%3A0x4b4fbdff03bfee09!2sAmrita%20School%20of%20Engineering!5e0!3m2!1sen!2sin!4v1687152589637!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div> -->
+
+        </section>
+    <!-- contact section ends here  -->
+
+    <!-- footer section starts here  -->
+    <section class="footer">
+          <div class="box-container">
+            <div class="box">
+              <h3>about us</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis temporibus eum eos ipsa eligendi sed itaque voluptatem dignissimos beatae dolore?</p>
+            </div>
+
+            <div class="box">
+              <h3>Our Location</h3>
+              <a href="#">India</a>
+              <a href="#">nepal</a>
+            </div>
+
+            <div class="box">
+              <h3>quick links</h3>
+              <a href="#">home</a>
+              <a href="#">book</a>
+              <a href="#">packages</a>
+              <a href="#">gallary</a>
+              <a href="#">services</a>
+              <a href="#">contacts</a>
+            </div>
+
+            <div class="box">
+              <h3>Follow us</h3>
+              <a href="#">facebook</a>
+              <a href="#">instagram</a>
+              <a href="#">twitter</a>
+              <a href="#">linkedin</a>
+              <a href="#">github</a>
+              
+            </div>
+
+          </div>
+          <h1 class="credit">created by <span>team travelo</span> | all rights reserved!</h1>
+    </section>
+    <!-- footer section ends here  -->
+
+
     <script src="Script.js"></script>
   </body>
 </html>
