--- a/book.html
+++ b/book.html
@@ -22,14 +22,14 @@
         <a href="#" class="logo"> <span>T</span>RAVELO</a>
         
         <nav class="navbar">
-            <a href="/index.html" style="color: orange;">HOME</a>
-            <a href="/book.html">book</a>
+            <a href="/index.html"  id="homeNav">HOME</a>
+            <a href="/book.html" style="color: orange;">book</a>
             <a href="/packages.html">packages</a>
             <a href="#services">services</a>
             <a href="#gallary">Gallary</a>
             <a href="#review">review</a>
             <a href="#contact">contact</a>
-        </nav>
+          </nav>
         <div class="icons">
             <i class="fa-solid fa-user" id="login-btn"></i>
         </div>
