--- a/packages.html
+++ b/packages.html
@@ -17,9 +17,9 @@
       <a href="#" class="logo"> <span>T</span>RAVELO</a>
 
       <nav class="navbar">
-        <a href="/index.html" style="color: orange">HOME</a>
+        <a href="/index.html"  id="homeNav">HOME</a>
         <a href="/book.html">book</a>
-        <a href="/packages.html">packages</a>
+        <a href="/packages.html" style="color: orange;">packages</a>
         <a href="#services">services</a>
         <a href="#gallary">Gallary</a>
         <a href="#review">review</a>
