--- a/book.html
+++ b/book.html
@@ -26,7 +26,7 @@
             <a href="/book.html" style="color: orange;">book</a>
             <a href="/packages.html">packages</a>
             <a href="#services">services</a>
-            <a href="#gallary">Gallary</a>
+            <a href="/gallery/gallery.html">Gallary</a>
             <a href="#review">review</a>
             <a href="#contact">contact</a>
           </nav>
