--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -5,8 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery Page</title>
     <link rel="stylesheet" href="style_gallery.css">
+    <link rel="stylesheet" href="/Styles.css">
 </head>
 <body>
+
+    <header>
+        <div id="menu-bar" class="fas fa-bars"></div>
+        <a href="#" class="logo"> <span>T</span>RAVELO</a>
+  
+        <nav class="navbar">
+          <a href="/index.html"  id="homeNav">HOME</a>
+          <a href="/book.html">book</a>
+          <a href="/packages.html">packages</a>
+          <a href="#services">services</a>
+          <a href="/gallery/gallery.html">Gallary</a>
+          <a href="#review">review</a>
+          <a href="#contact">contact</a>
+        </nav>
+        <div class="icons">
+          <i class="fa-solid fa-user" id="login-btn"></i>
+        </div>
+      </header>
+      <!-- login form container -->
+      <div class="login-form-container">
+        <i class="fa-sharp fa-solid fa-circle-xmark" id="form-close"></i>
+        <form action="#">
+          <h3>login</h3>
+          <input type="email" class="box" placeholder="Your Email" />
+          <input type="password" class="box" placeholder="Your Password" />
+          <input type="Submit" value="login now" class="btn" />
+          <input type="checkbox" id="" remember />
+          <label for="remember">remember me</label>
+          <p>forgot password? <a href="#">click here</a></p>
+          <p>don't have an account? <a href="#">register now</a></p>
+        </form>
+      </div>
     <input type="radio" name="photos" id="check1" checked>
     <input type="radio" name="photos" id="check2">
     <input type="radio" name="photos" id="check3">
@@ -228,5 +261,7 @@
             </div>
         </div>
     </div>
+
+    
 </body>
 </html>
