--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="/book.html">book</a>
         <a href="/packages.html">packages</a>
         <a href="#services">services</a>
-        <a href="#gallary">Gallary</a>
+        <a href="/gallery/gallery.html">Gallary</a>
         <a href="#review">review</a>
         <a href="#contact">contact</a>
       </nav>
