--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <input type="email" class="box" placeholder="Your Email" />
         <input type="password" class="box" placeholder="Your Password" />
         <input type="Submit" value="login now" class="btn" />
-        <input type="checkbox" id="" remember />
+        <input type="checkbox" id="remember" />
         <label for="remember">remember me</label>
         <p>forgot password? <a href="#">click here</a></p>
         <p>don't have an account? <a href="#">register now</a></p>
