--- a/index.html
+++ b/index.html
@@ -119,10 +119,7 @@
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-              dolorem sapiente recusandae exercitationem! Corporis rerum, quidem
-              perspiciatis a quam omnis placeat nostrum esse unde sed itaque
-              ipsa quisquam quasi officia.
+              Mount Everest is the highest peak in the world which stands at 8848 m high altitude from sea level.<br> Mount Everest named by name of Sir George Everest in 1865 AD. It is located in the Solukhumbu district of Nepal. Mount Everest, known in Nepalese as Sagarmatha. There are other local names also provided for Mount Everest like Third pole.
             </p>
           </div>
           <div class="button">
@@ -485,7 +482,7 @@
               <a href="#">home</a>
               <a href="#">book</a>
               <a href="#">packages</a>
-              <a href="#">gallary</a>
+              <a href="/gallery/gallery.html">gallary</a>
               <a href="#">services</a>
               <a href="#">contacts</a>
             </div>
