--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
             <div class="box">
                 <img src="/media_content/pro3.jpg" alt="aayush">
                 <div class="content">
-                    <h3>Aayush</h3>
-                    <p>the service was really best. go for it</p>
+                    <h3>Krishna Bhagat</h3>
+                    <p>"Beautiful experience. Loved the hospitality planning and coordination.</p>
                 </div>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
@@ -362,8 +362,8 @@
             <div class="box">
                 <img src="/media_content/pro4.jpg" alt="aayush">
                 <div class="content">
-                    <h3>Aayush</h3>
-                    <p>the service was really best. go for it</p>
+                    <h3>Sanskar Agrahari</h3>
+                    <p>Thanks Travello for such a wonderul experience.</p>
                 </div>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
