--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- header section -->
     <header>
-      <div id="menu-bar" class="fas fa-bars"></div>
+      <!-- <div id="menu-bar" class="fas fa-bars"></div> -->
       <a href="#" class="logo"> <span>T</span>RAVELO</a>
 
       <nav class="navbar">
