--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
       <i class="fa-sharp fa-solid fa-circle-xmark" id="form-close"></i>
       <form action="#">
         <h3>login</h3>
-        <input type="email" class="box" placeholder="Your Email" />
-        <input type="password" class="box" placeholder="Your Password" />
-        <input type="Submit" value="login now" class="btn" />
+        <input type="email" class="box" id="emaill" placeholder="Your Email" />
+        <input type="password" class="box" id="pass" placeholder="Your Password" />
+        <p id="noempty"></p>
+        <input type="Submit" value="login now" class="btn" onclick="validate()" />
         <input type="checkbox" id="remember" />
         <label for="remember">remember me</label>
         <p>forgot password? <a href="#">click here</a></p>
@@ -148,10 +149,7 @@
             <div class="content">
               <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                dolorem sapiente recusandae exercitationem! Corporis rerum, quidem
-                perspiciatis a quam omnis placeat nostrum esse unde sed itaque
-                ipsa quisquam quasi officia.
+                Lorem ipsum d
               </p>
             </div>
             <div class="button">
