--- a/packages.html
+++ b/packages.html
@@ -37,7 +37,7 @@
         <h3>login</h3>
         <input type="email" class="box" placeholder="Your Email" />
         <input type="password" class="box" placeholder="Your Password" />
-        <input type="Submit" value="login now" class="btn" />
+        <input type="Submit" value="login now" onclick="validate()" class="btn" />
         <input type="checkbox" id="" remember />
         <label for="remember">remember me</label>
         <p>forgot password? <a href="#">click here</a></p>
@@ -69,9 +69,17 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta  </p>
+              3 days 4 night
+               </p>
+               <p>facilities</p>
+               <div class="stars1">
+                <i class="fa-solid fa-utensils"></i>
+                <i class="fa-solid fa-car"></i>
+                <i class="fa-solid fa-hotel"></i>
+                <i class="fa-solid fa-leaf"></i>
+               </div>
               <div class="button">
-                <a href="#" class="btn">Book Now</a>
+                <a href="#" class="btn">View Details</a>
               </div>
           
           </div>
@@ -79,7 +87,7 @@
         </div>
 
         <div class="box">
-          <img src="/media_content/shimla.jpg" alt="pop1" />
+          <img src="/media_content/pop2.jpg" alt="pop1" />
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Shimla</h3>
             <p>INR 15000 per person</p>
@@ -102,7 +110,7 @@
 
 
         <div class="box">
-          <img src="/media_content/shimla.jpg" alt="pop1" />
+          <img src="/media_content/gall5.jpg" alt="pop1" />
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Shimla</h3>
             <p>INR 15000 per person</p>
@@ -124,9 +132,9 @@
         </div>
 
         <div class="box">
-          <img src="/media_content/shimla.jpg" alt="pop1" />
+          <img src="/media_content/gall1.jpg" alt="pop1" />
           <div class="content">
-            <h3><i class="fa-solid fa-location-dot"></i>Shimla</h3>
+            <h3><i class="fa-solid fa-location-dot"></i>KedarNath</h3>
             <p>INR 15000 per person</p>
             <div class="stars">
                     <i class="fa-solid fa-star"></i>
@@ -147,7 +155,7 @@
 
 
         <div class="box">
-          <img src="/media_content/shimla.jpg" alt="pop1" />
+          <img src="/media_content/gall3.jpeg" alt="pop1" />
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Shimla</h3>
             <p>INR 15000 per person</p>
@@ -299,6 +307,43 @@
       </div>
     </section>
     <!-- packages section ends here -->
+
+    <section class="footer">
+      <div class="box-container">
+        <div class="box">
+          <h3>about us</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis temporibus eum eos ipsa eligendi sed itaque voluptatem dignissimos beatae dolore?</p>
+        </div>
+
+        <div class="box">
+          <h3>Our Location</h3>
+          <a href="#">India</a>
+          <a href="#">nepal</a>
+        </div>
+
+        <div class="box">
+          <h3>quick links</h3>
+          <a href="#">home</a>
+          <a href="#">book</a>
+          <a href="#">packages</a>
+          <a href="/gallery/gallery.html">gallary</a>
+          <a href="#">services</a>
+          <a href="#">contacts</a>
+        </div>
+
+        <div class="box">
+          <h3>Follow us</h3>
+          <a href="#">facebook</a>
+          <a href="#">instagram</a>
+          <a href="#">twitter</a>
+          <a href="#">linkedin</a>
+          <a href="#">github</a>
+          
+        </div>
+
+      </div>
+      <h1 class="credit">created by <span>team travelo</span> | all rights reserved!</h1>
+</section>
 
     <script src="Script.js"></script>
   </body>
