--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -14,11 +14,11 @@
         <a href="#" class="logo"> <span>T</span>RAVELO</a>
   
         <nav class="navbar">
-          <a href="/index.html"  id="homeNav">HOME</a>
+          <a href="/index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
           <a href="/book.html">book</a>
           <a href="/packages.html">packages</a>
           <a href="#services">services</a>
-          <a href="/gallery/gallery.html">Gallary</a>
+          <a href="/gallery/gallery.html" style="color: orange;">Gallary</a>
           <a href="#review">review</a>
           <a href="#contact">contact</a>
         </nav>
