--- a/packages.html
+++ b/packages.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -18,7 +20,7 @@
       <a href="#" class="logo"> <span>T</span>RAVELO</a>
 
       <nav class="navbar">
-        <a href="/index.html"  id="homeNav">HOME</a>
+        <a href="/index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
         <a href="/book.html">book</a>
         <a href="/packages.html" style="color: orange;">packages</a>
         <a href="#services">services</a>
@@ -47,7 +49,34 @@
 
     <!-- top section starts here -->
         <section class="top" id="top">
-          <img src="/media_content/package1.jpg" alt="old person trekking">
+          <div class="topimg">
+          <!-- <img src="/media_content/package1.jpg" alt="old person trekking" id="topimage"> -->
+          <video src="/media_content/vid3.mp4" autoplay muted loop></video>
+          </div>
+          <div class="con">
+            <h1>Get Seasonal Offers</h1>
+          </div>
+          <!-- <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/media_content/gall3.jpeg" class="d-block w-100" alt="...">
+              </div> -->
+              <!-- <div class="carousel-item">
+                <img src="/media_content/pop3.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/media_content/pro2.jpg" class="d-block w-100" alt="...">
+              </div> -->
+            <!-- </div> -->
+            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button> -->
+          <!-- </div> -->
         </section>
 
     <!-- top section ends here -->
@@ -58,6 +87,7 @@
       <div class="box-container">
         <div class="box">
           <img src="/media_content/shimla.jpg" alt="pop1" />
+          
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Shimla</h3>
             <p>INR 15000 per person</p>
@@ -345,6 +375,7 @@
       <h1 class="credit">created by <span>team travelo</span> | all rights reserved!</h1>
 </section>
 
-    <script src="Script.js"></script>
+
+<script src="Script.js"></script>
   </body>
 </html>
