--- a/book.html
+++ b/book.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="Styles.css">
-    <link rel="stylesheet" href="book.css">
+    <link rel="stylesheet" href="./Styles.css">
+    <link rel="stylesheet" href="./book.css">
     <title>Travelo:ESTD.2023</title>
     <style>
         body{
@@ -22,11 +22,11 @@
         <a href="#" class="logo"> <span>T</span>RAVELO</a>
         
         <nav class="navbar">
-            <a href="/index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
-            <a href="/book.html" style="color: orange;">book</a>
-            <a href="/packages.html">packages</a>
+            <a href="./index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
+            <a href="./book.html" style="color: orange;">book</a>
+            <a href="./packages.html">packages</a>
             <a href="#services">services</a>
-            <a href="/gallery/gallery.html">Gallary</a>
+            <a href="./../gallery/gallery.html">Gallary</a>
             <a href="#review">review</a>
             <a href="#contact">contact</a>
           </nav>
@@ -56,7 +56,7 @@
 
             <div class="row">
                 <div class="image">
-                    <img src="/media_content/4677543_2483403-removebg-preview.png" alt="">
+                    <img src="./media_content/4677543_2483403-removebg-preview.png" alt="">
                 </div>
                 <form action="">
                     <div class="inputBox" >
@@ -90,6 +90,6 @@
 
 
     
-    <script src="Script.js"></script>
+    <script src="./Script.js"></script>
 </body>
 </html>
