--- a/load.html
+++ b/load.html
@@ -25,6 +25,6 @@
     <h1>Welcome to the Index Page!</h1>
   </div>
 
-  <script src="load.js"></script>
+  <script src="./load.js"></script>
 </body>
 </html>
