--- a/packages.html
+++ b/packages.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="Styles.css" />
-    <link rel="stylesheet" href="package.css">
+    <link rel="stylesheet" href="./Styles.css" />
+    <link rel="stylesheet" href="./package.css">
     <title>Travelo:ESTD.2023</title>
   </head>
   <body>
@@ -20,11 +20,11 @@
       <a href="#" class="logo"> <span>T</span>RAVELO</a>
 
       <nav class="navbar">
-        <a href="/index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
-        <a href="/book.html">book</a>
-        <a href="/packages.html" style="color: orange;">packages</a>
+        <a href="./index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
+        <a href="./book.html">book</a>
+        <a href="./packages.html" style="color: orange;">packages</a>
         <a href="#services">services</a>
-        <a href="/gallery/gallery.html">Gallary</a>
+        <a href="./../gallery/gallery.html">Gallary</a>
         <a href="#review">review</a>
         <a href="#contact">contact</a>
       </nav>
@@ -35,7 +35,7 @@
     <!-- login form container -->
     <div class="login-form-container">
       <i class="fa-sharp fa-solid fa-circle-xmark" id="form-close"></i>
-      <form action="#">
+      <form action="./index.html">
         <h3>login</h3>
         <input type="email" class="box" placeholder="Your Email" />
         <input type="password" class="box" placeholder="Your Password" />
@@ -51,7 +51,7 @@
         <section class="top" id="top">
           <div class="topimg">
           <!-- <img src="/media_content/package1.jpg" alt="old person trekking" id="topimage"> -->
-          <video src="/media_content/vid3.mp4" autoplay muted loop></video>
+          <video src="./media_content/vid3.mp4" autoplay muted loop></video>
           </div>
           <div class="con">
             <h1>Get Seasonal Offers</h1>
@@ -86,7 +86,7 @@
 
       <div class="box-container">
         <div class="box">
-          <img src="/media_content/shimla.jpg" alt="pop1" />
+          <img src="./media_content/shimla.jpg" alt="pop1" />
           
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Shimla</h3>
@@ -117,7 +117,7 @@
         </div>
 
         <div class="box">
-          <img src="/media_content/pop2.jpg" alt="pop1" />
+          <img src="./media_content/pop2.jpg" alt="pop1" />
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Shimla</h3>
             <p>INR 15000 per person</p>
@@ -140,7 +140,7 @@
 
 
         <div class="box">
-          <img src="/media_content/gall5.jpg" alt="pop1" />
+          <img src="./media_content/gall5.jpg" alt="pop1" />
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Shimla</h3>
             <p>INR 15000 per person</p>
@@ -162,7 +162,7 @@
         </div>
 
         <div class="box">
-          <img src="/media_content/gall1.jpg" alt="pop1" />
+          <img src="./media_content/gall1.jpg" alt="pop1" />
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>KedarNath</h3>
             <p>INR 15000 per person</p>
@@ -185,7 +185,7 @@
 
 
         <div class="box">
-          <img src="/media_content/gall3.jpeg" alt="pop1" />
+          <img src="./media_content/gall3.jpeg" alt="pop1" />
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Shimla</h3>
             <p>INR 15000 per person</p>
@@ -208,7 +208,7 @@
 
 
         <div class="box">
-          <img src="/media_content/shimla.jpg" alt="pop1" />
+          <img src="./media_content/shimla.jpg" alt="pop1" />
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Shimla</h3>
             <p>INR 15000 per person</p>
@@ -240,7 +240,7 @@
 
       <div class="box-container">
         <div class="box">
-          <img src="/media_content/pop1.jpg" alt="pop1" />
+          <img src="./media_content/pop1.jpg" alt="pop1" />
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
             <p>
@@ -256,7 +256,7 @@
         </div>
 
         <div class="box">
-            <img src="/media_content/pop2.jpg" alt="pop1" />
+            <img src="./media_content/pop2.jpg" alt="pop1" />
             <div class="content">
               <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
               <p>
@@ -272,7 +272,7 @@
           </div>
 
           <div class="box">
-            <img src="/media_content/pop3.jpg" alt="pop1" />
+            <img src="./media_content/pop3.jpg" alt="pop1" />
             <div class="content">
               <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
               <p>
@@ -356,7 +356,7 @@
           <a href="#">home</a>
           <a href="#">book</a>
           <a href="#">packages</a>
-          <a href="/gallery/gallery.html">gallary</a>
+          <a href="./../gallery/gallery.html">gallary</a>
           <a href="#">services</a>
           <a href="#">contacts</a>
         </div>
@@ -376,6 +376,6 @@
 </section>
 
 
-<script src="Script.js"></script>
+<script src="./Script.js"></script>
   </body>
 </html>
