--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="icon" type="image/x-icon" href="/media_content/gall1.jpg">
-    <link rel="stylesheet" href="Styles.css" >
+    <link rel="icon" type="image/x-icon" href="./media_content/gall1.jpg">
+    <link rel="stylesheet" href="./Styles.css" >
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <title>Travelo:ESTD.2023</title>
   </head>
@@ -22,11 +22,11 @@
       <a href="#" class="logo"> <span>T</span>RAVELO</a>
 
       <nav class="navbar">
-        <a href="/index.html"  id="homeNav" style="color: orange;"><i class="fa-solid fa-house"></i></a>
-        <a href="/book.html">book</a>
-        <a href="/packages.html">packages</a>
+        <a href="./index.html"  id="homeNav" style="color: orange;"><i class="fa-solid fa-house"></i></a>
+        <a href="./book.html">book</a>
+        <a href="./packages.html">packages</a>
         <a href="#services">services</a>
-        <a href="/gallery/gallery.html">Gallary</a>
+        <a href="./../gallery/gallery.html">Gallary</a>
         <a href="#review">review</a>
         <a href="#contact">contact</a>
       </nav>
@@ -37,7 +37,7 @@
     <!-- login form container -->
     <div class="login-form-container">
       <i class="fa-sharp fa-solid fa-circle-xmark" id="form-close"></i>
-      <form action="#">
+      <form action="./index.html">
         <h3>login</h3>
         <input type="email" class="box" id="emaill" onclick="validat()" placeholder="Your Email" />
         <input type="password" class="box" id="pass" onclick="validat()" placeholder="Your Password" />
@@ -58,7 +58,7 @@
       </div>
 
       <div class="search-container">
-        <form action="#" class="search-bar">
+        <form action="./index.html" class="search-bar">
           <input type="text" placeholder="Search" class="text" />
           <button>
             <a href="#" id="searchbtn"
@@ -78,7 +78,7 @@
 
       <div class="video-container">
         <video
-          src="/media_content/vid.mp4"
+          src="./media_content/vid.mp4"
           id="video-slider"
           autoplay
           muted
@@ -94,19 +94,19 @@
         <div class="secbox">
           <div class="imagebox">
             <img
-              src="/media_content/vector-illustration-people-book-vacation-on-laptop-travel-or-journey-planning-plan-holiday-route-online-concept-internet-e-commerce-travel-techno-2F80F0R.jpg"
+              src="./media_content/vector-illustration-people-book-vacation-on-laptop-travel-or-journey-planning-plan-holiday-route-online-concept-internet-e-commerce-travel-techno-2F80F0R.jpg"
               alt=""
             />
           </div>
           <div class="imagebox">
             <img
-              src="/media_content/vector-illustration-people-book-vacation-on-laptop-travel-or-journey-planning-plan-holiday-route-online-concept-internet-e-commerce-travel-techno-2F80F0R.jpg"
+              src="./media_content/vector-illustration-people-book-vacation-on-laptop-travel-or-journey-planning-plan-holiday-route-online-concept-internet-e-commerce-travel-techno-2F80F0R.jpg"
               alt=""
             />
           </div>
           <div class="imagebox">
             <img
-              src="/media_content/vector-illustration-people-book-vacation-on-laptop-travel-or-journey-planning-plan-holiday-route-online-concept-internet-e-commerce-travel-techno-2F80F0R.jpg"
+              src="./media_content/vector-illustration-people-book-vacation-on-laptop-travel-or-journey-planning-plan-holiday-route-online-concept-internet-e-commerce-travel-techno-2F80F0R.jpg"
               alt=""
             />
           </div>
@@ -121,7 +121,7 @@
 
       <div class="box-container">
         <div class="box">
-          <img src="/media_content/pop1.jpg" alt="pop1" />
+          <img src="./media_content/pop1.jpg" alt="pop1" />
           <div class="content">
             <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
             <p>
@@ -134,7 +134,7 @@
         </div>
 
         <div class="box">
-            <img src="/media_content/pop2.jpg" alt="pop1" />
+            <img src="./media_content/pop2.jpg" alt="pop1" />
             <div class="content">
               <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
               <p>
@@ -150,7 +150,7 @@
           </div>
 
           <div class="box">
-            <img src="/media_content/pop3.jpg" alt="pop1" />
+            <img src="./media_content/pop3.jpg" alt="pop1" />
             <div class="content">
               <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
               <p>
@@ -268,7 +268,7 @@
             <h1 class="heading">Gallary</h1>
             <div class="box-container">
                 <div class="box">
-                    <img src="/media_content/gall1.jpg" alt="gall1">
+                    <img src="./media_content/gall1.jpg" alt="gall1">
                     <div class="content">
                         <h3>Religious Site</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -277,7 +277,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="/media_content/gall2.jpg" alt="gall1">
+                    <img src="./media_content/gall2.jpg" alt="gall1">
                     <div class="content">
                         <h3>Religious Site</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -286,7 +286,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="/media_content/gall3.jpeg" alt="gall1">
+                    <img src="./media_content/gall3.jpeg" alt="gall1">
                     <div class="content">
                         <h3>Religious Site</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -295,7 +295,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="/media_content/gall5.jpg" alt="gall1">
+                    <img src="./media_content/gall5.jpg" alt="gall1">
                     <div class="content">
                         <h3>Religious Site</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -304,7 +304,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="/media_content/gall3.jpeg" alt="gall1">
+                    <img src="./media_content/gall3.jpeg" alt="gall1">
                     <div class="content">
                         <h3>Religious Site</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -313,7 +313,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="/media_content/gall3.jpeg" alt="gall1">
+                    <img src="./media_content/gall3.jpeg" alt="gall1">
                     <div class="content">
                         <h3>Religious Site</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -331,7 +331,7 @@
         <h1>Customer's review</h1>
         <div class="box-container">
             <div class="box">
-                <img src="/media_content/pro2.jpg" alt="aayush">
+                <img src="./media_content/pro2.jpg" alt="aayush">
                 <div class="content">
                     <h3>Aayush</h3>
                     <p>the service was really best. go for it</p>
@@ -347,7 +347,7 @@
             </div>
 
             <div class="box">
-                <img src="/media_content/pro3.jpg" alt="aayush">
+                <img src="./media_content/pro3.jpg" alt="aayush">
                 <div class="content">
                     <h3>Krishna Bhagat</h3>
                     <p>"Beautiful experience. Loved the hospitality planning and coordination.</p>
@@ -363,7 +363,7 @@
             </div>
 
             <div class="box">
-                <img src="/media_content/pro4.jpg" alt="aayush">
+                <img src="./media_content/pro4.jpg" alt="aayush">
                 <div class="content">
                     <h3>Sanskar Agrahari</h3>
                     <p>Thanks Travello for such a wonderul experience.</p>
@@ -379,7 +379,7 @@
             </div>
 
             <div class="box">
-                <img src="/media_content/pro3.jpg" alt="aayush">
+                <img src="./media_content/pro3.jpg" alt="aayush">
                 <div class="content">
                     <h3>Aayush</h3>
                     <p>the service was really best. go for it</p>
@@ -395,7 +395,7 @@
             </div>
 
             <div class="box">
-                <img src="/media_content/pro4.jpg" alt="aayush">
+                <img src="./media_content/pro4.jpg" alt="aayush">
                 <div class="content">
                     <h3>Aayush</h3>
                     <p>the service was really best. go for it</p>
@@ -411,7 +411,7 @@
             </div>
 
             <div class="box">
-                <img src="/media_content/pro1.jpg" alt="aayush">
+                <img src="./media_content/pro1.jpg" alt="aayush">
                 <div class="content">
                     <h3>Aayush</h3>
                     <p>the service was really best. go for it</p>
@@ -437,9 +437,9 @@
             <h1>connect to us</h1>
             <div class="row">
                 <div class="image">
-                    <img src="/media_content/contact.png" alt="conatct">
+                    <img src="./media_content/contact.png" alt="conatct">
                 </div>
-                <form action="#">
+                <form action="./index.html">
                     <div class="inputBox">
                         <input type="text" placeholder="Name">
                         <input type="email" placeholder="email">
@@ -485,7 +485,7 @@
               <a href="#">home</a>
               <a href="#">book</a>
               <a href="#">packages</a>
-              <a href="/gallery/gallery.html">gallary</a>
+              <a href="./gallery/gallery.html">gallary</a>
               <a href="#">services</a>
               <a href="#">contacts</a>
             </div>
@@ -506,7 +506,7 @@
     <!-- footer section ends here  -->
   
 
-    <script src="Script.js"></script>
+    <script src="./Script.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
