--- a/book.html
+++ b/book.html
@@ -38,7 +38,7 @@
     <div class="login-form-container">
         
         <i class="fa-sharp fa-solid fa-circle-xmark" id="form-close"></i>
-        <form action="#">
+        <form action="./index.html">
             <h3>login</h3>
             <input type="email" class="box" placeholder="Your Email" >
             <input type="password" class="box" placeholder="Your Password" >
