--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="icon" type="image/x-icon" href="/media_content/gall1.jpg">
+    <!-- <link rel="icon" type="image/x-icon" href="/media_content/gall1.jpg"> -->
     <link rel="stylesheet" href="Styles.css" >
     
     
@@ -437,7 +437,7 @@
 
 
    <section class="developers">
-        <div class="swiper mySwiper container">
+        <div class="swiper mySwiper containerop">
             <div class="swiper-wrapper content">
                 <div class="swiper-slide card">
                     <div class="card-content">
@@ -641,8 +641,8 @@
           <h1 class="credit">created by <span>team travelo</span> | all rights reserved!</h1>
     </section>
     <!-- footer section ends here  -->
+    <script src="Script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-  <script src="Script.js"></script>
   
     <script> var swiper = new Swiper(".mySwiper", {
       slidesPerView: 3,
