--- a/packages.html
+++ b/packages.html
@@ -53,7 +53,7 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide"><img src="./media_content/ad1.jpg" alt="s"></div>
       <div class="swiper-slide"><img src="./media_content/ad2.jpg" alt="s"></div>
-      <div class="swiper-slide"><img src="./media_content/ad3.jpg" alt="s"></div>
+      <div class="swiper-slide"><img src="./media_content/gall5.jpg" alt="s"></div>
       <div class="swiper-slide"><img src="./media_content/ad4.jpg" alt="s"></div>
       <div class="swiper-slide"><img src="./media_content/ad5.jpg" alt="s"></div>
       <div class="swiper-slide"><img src="./media_content/ad6.jpg" alt="s"></div>
