--- a/index.html
+++ b/index.html
@@ -647,6 +647,7 @@
     <script> var swiper = new Swiper(".mySwiper", {
       slidesPerView: 3,
       centeredSlides: true,
+      loop: true,
       spaceBetween: 30,
       pagination: {
         el: ".swiper-pagination",
