--- a/packages.html
+++ b/packages.html
@@ -25,7 +25,7 @@
         <a href="./packages.html" style="color: orange;">packages</a>
         <a href="#services">services</a>
         <a href="./../gallery/gallery.html">Gallary</a>
-        <a href="#review">review</a>
+        <a href="./../review/review.html">review</a>
         <a href="#contact">contact</a>
       </nav>
       <div class="icons">
@@ -362,7 +362,7 @@
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="Script.js"></script>
+<script src="./Script.js"></script>
 <script>
   var swiper = new Swiper(".mySwiper", {
     slidesPerView: 1,
