--- a/book.html
+++ b/book.html
@@ -27,7 +27,7 @@
             <a href="./packages.html">packages</a>
             <a href="#services">services</a>
             <a href="./../gallery/gallery.html">Gallary</a>
-            <a href="#review">review</a>
+            <a href="./../review/review.html">review</a>
             <a href="#contact">contact</a>
           </nav>
         <div class="icons">
