--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#services">services</a>
         <a href="/gallery/gallery.html">Gallary</a>
         <a href="#review">review</a>
-        <a href="#contact">contact</a>
+        <a href="./contact.html">contact</a>
       </nav>
       <div class="icons">
         <i class="fa-solid fa-user" id="login-btn"></i>
@@ -45,8 +45,8 @@
         <input type="Submit" value="login now" class="btn" onclick="validate()" id="buttonLogin" />
         <input type="checkbox" id="remember" />
         <label for="remember">remember me</label>
-        <p>forgot password? <a href="#">click here</a></p>
-        <p>don't have an account? <a href="#">register now</a></p>
+        <p>forgot password? <a href="#" >click here</a></p>
+        <p>don't have an account? <a href="./register.html" target="_blank">register now</a></p>
       </form>
     </div>
 
